tests/expectations/compiler/mappings/too_many_mappings_fail.out
DCE_ENABLED:
Error [ETYC0372062]: The number of mappings exceeds the maximum. snarkVM allows up to 31 mappings within a single program.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372062]: The number of mappings exceeds the maximum. snarkVM allows up to 31 mappings within a single program.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
